--- a/vars/ubuntu-focal.yml
+++ b/vars/ubuntu-focal.yml
@@ -3,3 +3,8 @@
 masks:
   packages:
     - systemd-timesyncd
+
+# Gnome Console is not yet available
+release_packages:
+  gnome-console:
+    - gnome-terminal
