--- a/tasks/packages/prewash/packages.yml
+++ b/tasks/packages/prewash/packages.yml
@@ -13,6 +13,11 @@
         map(attribute='key') |
         difference(masks.packages | default([]))
       }}
+    packages: |
+      {{
+        (family_packages | default({})) |
+        combine(distro_packages | default({}))
+      }}
   ansible.builtin.package:
     name: |
       {{
