--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -13,3 +13,8 @@ apt_default_mirrors:
     branches:
       - "{{ debian_release }}{{ '-security' if ansible_distribution_major_version >= '11' else '' }}/updates"
     sections: "{{ apt_sections }}"
+
+# Firefox is proposed under the ESR version only
+distro_packages:
+  firefox:
+    - firefox-esr
