--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -12,28 +12,28 @@
       ansible.builtin.command:
         cmd: "firewall-cmd --get-default-zone"
       register: result
-      changed_when: result.stdout != system_firewall_zone
+      changed_when: result.stdout != system_firewall_default_zone
       notify: set default zone
 
     - name: Firewall - Rules
       when: system_firewall_rules | length > 0
       ansible.posix.firewalld:
-        interface: "{{ rule.interface | default(system_firewall_public_interface) }}"
-        service: "{{ rule.service | default(omit) }}"
-        state: "{{ rule.state | default(omit) }}"
+        icmp_block: "{{ rule.icmp_block | default(omit) }}"
+        icmp_block_inversion: "{{ rule.icmp_block_inversion | default(omit) }}"
+        immediate: "{{ rule.immediate | default(omit) }}"
+        interface: "{{ rule.interface | default(omit) }}"
+        masquerade: "{{ rule.masquerade | default(omit) }}"
+        offline: "{{ rule.offline | default(omit) }}"
+        permanent: "{{ rule.permanent | default(omit) }}"
         port: "{{ rule.port | default(omit) }}"
         port_forward: "{{ rule.port_forward | default(omit) }}"
         rich_rule: "{{ rule.rich_rule | default(omit) }}"
+        service: "{{ rule.service | default(omit) }}"
         source: "{{ rule.source | default(omit) }}"
-        icmp_block: "{{ rule.icmp_block | default(omit) }}"
-        icmp_block_inversion: "{{ rule.icmp_block_inversion | default(omit) }}"
-        zone: "{{ rule.zone | default(omit) }}"
-        permanent: "{{ rule.permanent | default(omit) }}"
-        immediate: "{{ rule.immediate | default(omit) }}"
-        timeout: "{{ rule.timeout | default(omit) }}"
-        masquerade: "{{ rule.masquerade | default(omit) }}"
-        offline: "{{ rule.offline | default(omit) }}"
+        state: "{{ rule.state | default(omit) }}"
         target: "{{ rule.target | default(omit) }}"
+        timeout: "{{ rule.timeout | default(omit) }}"
+        zone: "{{ rule.zone | default(system_firewall_default_zone) }}"
       loop: "{{ system_firewall_rules }}"
       loop_control:
         loop_var: rule
