--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -20,17 +20,17 @@
       ansible.posix.firewalld:
         icmp_block: "{{ rule.icmp_block | default(omit) }}"
         icmp_block_inversion: "{{ rule.icmp_block_inversion | default(omit) }}"
-        immediate: "{{ rule.immediate | default(omit) }}"
+        immediate: "{{ rule.immediate | default(true) }}"
         interface: "{{ rule.interface | default(omit) }}"
         masquerade: "{{ rule.masquerade | default(omit) }}"
         offline: "{{ rule.offline | default(omit) }}"
-        permanent: "{{ rule.permanent | default(omit) }}"
+        permanent: "{{ rule.permanent | default(true) }}"
         port: "{{ rule.port | default(omit) }}"
         port_forward: "{{ rule.port_forward | default(omit) }}"
         rich_rule: "{{ rule.rich_rule | default(omit) }}"
         service: "{{ rule.service | default(omit) }}"
         source: "{{ rule.source | default(omit) }}"
-        state: "{{ rule.state | default(omit) }}"
+        state: "{{ rule.state | default('enabled') }}"
         target: "{{ rule.target | default(omit) }}"
         timeout: "{{ rule.timeout | default(omit) }}"
         zone: "{{ rule.zone | default(system_firewall_default_zone) }}"
